HGIMG4の微調整 ドキュメントの更新
Former-commit-id: 31c78a1525b124d3265ff1ed02490653d380f62f

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2015(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.5 / onion software 1997-2016(c)</p>
 		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="タイトル">
 		<h1>HSPマニュアル総合インデックス</h1>
 		
@@ -57,7 +57,6 @@
 					<li><a href="doclib/hspext.txt">HSPEXT.DLL マニュアル（hspext.txt）</a></li>
 					<li><a href="doclib/hspda.txt">HSPDA.DLL マニュアル（hspda.txt）</a></li>
 					<li><a href="doclib/hspdb.txt">HSPDB.DLL マニュアル（hspdb.txt）</a></li>
-					<li><a href="doclib/hspdx.txt">HSPDX.DLL マニュアル（hspdx.txt）</a></li>
 					<li><a href="doclib/hspcv.txt">HSPCV.DLL マニュアル（hspcv.txt）</a></li>
 					<li><a href="doclib/hgimg3.txt">HGIMG3 マニュアル（hgimg3.txt）</a></li>
 					<ul>
@@ -76,7 +75,6 @@
 					<li><a href="doclib/d3module/d3module.txt">d3module マニュアル（d3module.txt）</a></li>
 					<li><a href="doclib/Artlet2D/Artlet2D.txt">Artlet2D マニュアル（Artlet2D.txt）</a></li>
 					<li><a href="doclib/SQLele/SQLele.txt">SQLele マニュアル（SQLele.txt）</a></li>
-					<li><a href="doclib/llmod3.txt">llmod3 マニュアル（llmod3.txt）</a></li>
 					<li><a href="doclib/hspusbio/hspusbio.txt">hspusbio マニュアル（hspusbio.txt）</a></li>
 					<li><a href="doclib/hspprint.txt">hspprint マニュアル（hspprint.txt）</a></li>
 				</ul>
@@ -97,14 +95,9 @@
 				</ul>
 			</li>
 
-			<li>HSPLet3
-				<ul>
-					<li><a href="hsplet/readme.txt">readme（hsplet/readme.txt）</a></li>
-					<li><a href="hsplet/doc/index.html">マニュアル（hsplet/doc/index.html）</a></li>
-				</ul>
-    	    </li>
-
 			<li><a href="doclib/hgimg.txt">HGIMG.DLL マニュアル（古いバージョン）（hgimg.txt）</a></li>
+			<li><a href="doclib/hspdx.txt">HSPDX.DLL マニュアル（古いバージョン）（hspdx.txt）</a></li>
+			<li><a href="doclib/llmod3.txt">llmod3 マニュアル（古いバージョン）（llmod3.txt）</a></li>
 		</ul>
 
 		<!-- フッター -->
