android HSP3Dishランタイムの更新 dll呼び出しコードの修正
Former-commit-id: 03b382bd7ab41e3f5f77053fa21dbdb6174b73ed

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -67,7 +67,7 @@
 	<ul>
 	<li>android開発環境(SDK) → <a href="http://developer.android.com/sdk/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
-	<a href="http://developer.android.com/sdk/index.html#Other" target="_blank">Other Download Options</a>から、SDK Tools Only(Windows版)をダウンロードします。
+	「Get just the command line tools」からandroid-sdk_???-windows.zip(No installer)をダウンロードします。
 	zipアーカイブまたはインストーラー版を任意のフォルダにインストールしてください。推奨フォルダは、「c:\android\android-sdk～」です。
 	(インストールするSDKは基本的に32bit版を推奨します。64bit版での動作は確認していません。)
 	</p></ul>
@@ -75,12 +75,13 @@
 	<ul><p>
 	JDK (Java Development Kit)をインストールしてください。
 	</p></ul>
-	<li>Android NDK（Native Development Kit）開発環境 → <a href="http://developer.android.com/sdk/ndk/index.html" target="_blank">[ダウンロードサイト]</a>
+	<li>Android NDK（Native Development Kit）開発環境 → <a href="https://developer.android.com/ndk/downloads/index.html" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
 	最新版のWindows版zipアーカイブ(32bit版)を任意のフォルダに解凍してください。推奨フォルダは、「c:\android\android-ndk～」です。
-	(動作確認済みのバージョンは、r10です。r10よりも古いバージョンには対応していません)
+	(動作確認済みのバージョンは、r10dです。r10よりも古いバージョンには対応していません)→ <a href="http://dl.google.com/android/ndk/android-ndk-r10d-windows-x86.exe" target="_blank">[r10d(32bit)版のダウンロードリンクはこちら。]</a><br>
+	(r11、r12のバージョンはWindows上でのビルドに不具合があるため現時点では対応していません)
 	</p></ul>
-	<li>Apache Ant(開発補助ツール) → <a href="http://www.jajakarta.org/ant/ant-1.6.1/docs/ja/" target="_blank">[ダウンロードサイト]</a>
+	<li>Apache Ant(開発補助ツール) → <a href="http://ant.apache.org/" target="_blank">[ダウンロードサイト]</a>
 	<ul><p>
 	最新版のzipアーカイブを任意のフォルダに解凍してください。推奨フォルダは、「c:\android\apache-ant～」です。<br>
 	推奨するantのバージョンは、1.8.4または、1.9.4です。
